--- a/apps/main/package.json
+++ b/apps/main/package.json
@@ -21,6 +21,7 @@
         "fs-extra": "^11.1.1",
         "get-port": "^5.1.1",
         "graphql": "^16.8.0",
+        "graphql-subscriptions": "^2.0.0",
         "iterall": "^1.3.0",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.8.1",
