--- a/apps/main/package.json
+++ b/apps/main/package.json
@@ -9,7 +9,7 @@
     "scripts": {
         "build": "rimraf ./dist && webpack --config ./webpack.config.ts",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-        "test": "jest",
+        "test": "jest --coverage",
         "e2e": "jest --config ./test/jest-e2e.json"
     },
     "dependencies": {
@@ -18,22 +18,26 @@
         "@nestjs/core": "^10.0.0",
         "@nestjs/graphql": "^12.0.8",
         "@nestjs/platform-express": "^10.0.0",
+        "fs-extra": "^11.1.1",
         "get-port": "^5.1.1",
         "graphql": "^16.8.0",
+        "graphql-subscriptions": "^2.0.0",
         "iterall": "^1.3.0",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.8.1",
-        "zen-observable": "^0.10.0"
+        "zen-observable": "^0.10.0",
+        "zod": "^3.22.2"
     },
     "devDependencies": {
-        "@electron-toolkit/utils": "^2.0.0",
         "@apollo/client": "^3.8.1",
         "@apollo/server": "^4.9.1",
         "@as-integrations/fastify": "^2.1.0",
+        "@electron-toolkit/utils": "^2.0.0",
         "@nestjs/cli": "^10.0.0",
         "@nestjs/schematics": "^10.0.0",
         "@nestjs/testing": "^10.0.0",
         "@types/express": "^4.17.17",
+        "@types/fs-extra": "^11.0.1",
         "@types/jest": "^29.5.2",
         "@types/node": "^20.3.1",
         "@types/supertest": "^2.0.12",
@@ -57,22 +61,5 @@
         "webpack": "^5.88.2",
         "webpack-bundle-analyzer": "^4.9.0",
         "webpack-cli": "^5.1.4"
-    },
-    "jest": {
-        "moduleFileExtensions": [
-            "js",
-            "json",
-            "ts"
-        ],
-        "rootDir": "src",
-        "testRegex": ".*\\.spec\\.ts$",
-        "transform": {
-            "^.+\\.(t|j)s$": "ts-jest"
-        },
-        "collectCoverageFrom": [
-            "**/*.(t|j)s"
-        ],
-        "coverageDirectory": "../coverage",
-        "testEnvironment": "node"
     }
 }
