--- a/apps/renderer/package.json
+++ b/apps/renderer/package.json
@@ -14,10 +14,12 @@
         "@emotion/css": "^11.11.2",
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
+        "@mui/icons-material": "^5.14.3",
         "@mui/material": "^5.14.5",
         "apollo-link-logger": "^2.0.1",
         "graphql": "^16.8.0",
         "nanoid": "^4.0.2",
+        "rc-scrollbars": "^1.1.6",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.15.0",
@@ -27,6 +29,7 @@
         "zen-observable": "^0.10.0"
     },
     "devDependencies": {
+        "@emotion/babel-plugin": "^11.11.0",
         "@graphql-codegen/cli": "^5.0.0",
         "@graphql-codegen/typescript": "^4.0.1",
         "@graphql-codegen/typescript-graphql-files-modules": "^2.2.1",
