--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,16 +1,34 @@
 {
-  "name": "ui",
-  "version": "0.0.0",
-  "main": "./index.ts",
-  "types": "./index.ts",
-  "license": "MIT",
-  "scripts": {
-    "lint": "eslint \"**/*.ts\""
-  },
-  "devDependencies": {
-    "eslint": "^7.32.0",
-    "eslint-config-custom": "workspace:*",
-    "tsconfig": "workspace:*",
-    "typescript": "^4.9.4"
-  }
+    "name": "ui",
+    "version": "0.0.0",
+    "main": "./src/index.tsx",
+    "types": "./src/index.tsx",
+    "license": "MIT",
+    "scripts": {
+        "lint": "eslint \"**/*.ts\"",
+        "test": "jest --coverage"
+    },
+    "dependencies": {
+        "@emotion/css": "^11.11.2",
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
+        "@mui/material": "^5.14.5",
+        "nanoid": "^4.0.2",
+        "react": "^18.2.0"
+    },
+    "devDependencies": {
+        "@testing-library/jest-dom": "^6.0.1",
+        "@testing-library/react": "^14.0.0",
+        "@types/jest": "^29.5.3",
+        "@types/react": "^18.2.20",
+        "@types/react-dom": "^18.2.7",
+        "eslint": "^8.47.0",
+        "eslint-config-custom": "*",
+        "jest": "^29.6.2",
+        "jest-environment-jsdom": "^29.6.2",
+        "ts-jest": "^29.1.1",
+        "tsconfig": "workspace:*",
+        "types": "workspace:*",
+        "typescript": "^5.1.6"
+    }
 }
