--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,5 +1,13 @@
 {
-  "extends": "tsconfig/base.json",
-  "include": ["."],
-  "exclude": ["node_modules"]
+    "extends": "tsconfig/renderer.json",
+    "compilerOptions": {
+        "isolatedModules": false,
+        "jsx": "react-jsx",
+        "lib": ["ES2015", "DOM"],
+        "types": ["@testing-library/jest-dom"],
+        "module": "ESNext",
+        "target": "es6"
+    },
+    "include": ["./src"],
+    "exclude": ["node_modules"]
 }
