--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -2,7 +2,7 @@
     "extends": "tsconfig/renderer.json",
     "compilerOptions": {
         "isolatedModules": false,
-        "jsx": "react-jsx",
+        "jsx": "react",
         "lib": ["ES2015", "DOM"],
         "types": ["@testing-library/jest-dom"],
         "module": "ESNext",
