--- a/apps/electron/package.json
+++ b/apps/electron/package.json
@@ -26,7 +26,7 @@
         "get-port": "^5.1.1",
         "ts-node": "^10.9.1",
         "tsconfig": "workspace:*",
-        "typescript": "^5.1.6",
+        "typescript": "^5.2.1-rc",
         "vite": "^4.4.9",
         "winston": "^3.10.0"
     }
