--- a/apps/main/package.json
+++ b/apps/main/package.json
@@ -22,6 +22,7 @@
         "get-port": "^5.1.1",
         "graphql": "^16.8.0",
         "graphql-subscriptions": "^2.0.0",
+        "i18next-electron-fs-backend": "^3.0.0",
         "iterall": "^1.3.0",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.8.1",
@@ -57,7 +58,7 @@
         "tsconfig-paths": "^4.2.0",
         "tsconfig-paths-webpack-plugin": "^4.1.0",
         "types": "workspace:*",
-        "typescript": "^5.1.3",
+        "typescript": "^5.2.1-rc",
         "webpack": "^5.88.2",
         "webpack-bundle-analyzer": "^4.9.0",
         "webpack-cli": "^5.1.4"
