--- a/apps/renderer/package.json
+++ b/apps/renderer/package.json
@@ -18,10 +18,13 @@
         "@mui/material": "^5.14.5",
         "apollo-link-logger": "^2.0.1",
         "graphql": "^16.8.0",
+        "i18next": "^23.4.4",
+        "i18next-electron-fs-backend": "^3.0.0",
         "nanoid": "^4.0.2",
         "rc-scrollbars": "^1.1.6",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-i18next": "^13.1.2",
         "react-router-dom": "^6.15.0",
         "serialize-error": "^11.0.1",
         "types": "workspace:*",
@@ -44,7 +47,7 @@
         "eslint": "^8.47.0",
         "eslint-config-custom": "workspace:*",
         "tsconfig": "workspace:*",
-        "typescript": "^5.1.6",
+        "typescript": "^5.2.1-rc",
         "vite": "^4.4.9",
         "vite-tsconfig-paths": "^4.2.0"
     }
