--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -32,6 +32,6 @@
         "ts-jest": "^29.1.1",
         "tsconfig": "workspace:*",
         "types": "workspace:*",
-        "typescript": "^5.1.6"
+        "typescript": "^5.2.1-rc"
     }
 }
