--- a/apps/main/tsconfig.build.json
+++ b/apps/main/tsconfig.build.json
@@ -1,4 +1,4 @@
 {
     "extends": "./tsconfig.json",
-    "exclude": ["node_modules", "test", "dist", "**/*spec.ts", "webpack.config.ts", "jest.config.ts"]
+    "exclude": ["node_modules", "test", "dist", "**/*spec.ts", "webpack.config.ts", "jest.config.ts", "jest.setup.ts"]
 }
