--- a/apps/main/tsconfig.json
+++ b/apps/main/tsconfig.json
@@ -21,7 +21,10 @@
             "@nest/*": ["./nest/*"],
             "@electron/*": ["./electron/*"],
             "@config/*": ["./config/*"],
-            "@utils/*": ["./utils/*"]
+            "@utils/*": ["./utils/*"],
+            "@library/*": ["./library/*"],
+            "@music/*": ["./music/*"],
+            "@base/*": ["./base/*"]
         }
     }
 }
