--- a/apps/main/package.json
+++ b/apps/main/package.json
@@ -22,7 +22,9 @@
         "@nestjs/platform-express": "^10.0.0",
         "@nestjs/typeorm": "^10.0.0",
         "better-sqlite3": "^8.5.1",
+        "blake2": "^5.0.0",
         "fast-glob": "^3.3.1",
+        "file-type": "^16.5.4",
         "fs-extra": "^11.1.1",
         "get-port": "^5.1.1",
         "graphql": "^16.8.0",
@@ -33,7 +35,9 @@
         "music-metadata": "^7.13.4",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.8.1",
+        "sharp": "^0.32.5",
         "typeorm": "^0.3.17",
+        "uuid": "^9.0.0",
         "zen-observable": "^0.10.0",
         "zod": "^3.22.2"
     },
@@ -46,12 +50,14 @@
         "@nestjs/cli": "^10.0.0",
         "@nestjs/schematics": "^10.0.0",
         "@nestjs/testing": "^10.0.0",
+        "@types/blake2": "^4.0.1",
         "@types/express": "^4.17.17",
         "@types/fs-extra": "^11.0.1",
         "@types/jest": "^29.5.2",
         "@types/lodash": "^4.14.197",
         "@types/node": "^20.3.1",
         "@types/supertest": "^2.0.12",
+        "@types/uuid": "^9.0.2",
         "@types/webpack-bundle-analyzer": "^4.6.0",
         "@types/zen-observable": "^0.8.3",
         "electron": "^25.5.0",
