--- a/apps/main/tsconfig.json
+++ b/apps/main/tsconfig.json
@@ -26,7 +26,9 @@
             "@music/*": ["./music/*"],
             "@base/*": ["./base/*"],
             "@album/*": ["./album/*"],
-            "@artist/*": ["./artist/*"]
+            "@artist/*": ["./artist/*"],
+            "@image/*": ["./image/*"],
+            "@album-art/*": ["./album-art/*"]
         }
     }
 }
