--- a/apps/main/package.json
+++ b/apps/main/package.json
@@ -23,6 +23,7 @@
         "@nestjs/typeorm": "^10.0.0",
         "better-sqlite3": "^8.5.1",
         "blake2": "^5.0.0",
+        "dataloader": "^2.2.2",
         "fast-glob": "^3.3.1",
         "file-type": "^16.5.4",
         "fs-extra": "^11.1.1",
