--- a/apps/renderer/package.json
+++ b/apps/renderer/package.json
@@ -25,7 +25,10 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-i18next": "^13.1.2",
+        "react-measure": "^2.5.2",
+        "react-merge-refs": "^2.0.2",
         "react-router-dom": "^6.15.0",
+        "react-use-measure": "^2.1.1",
         "serialize-error": "^11.0.1",
         "types": "workspace:*",
         "ui": "workspace:*",
@@ -41,6 +44,7 @@
         "@parcel/watcher": "^2.2.0",
         "@types/react": "^18.2.20",
         "@types/react-dom": "^18.2.7",
+        "@types/react-measure": "^2.0.8",
         "@types/zen-observable": "^0.8.3",
         "@vitejs/plugin-react": "^4.0.4",
         "electron": "^25.5.0",
@@ -48,8 +52,9 @@
         "eslint-config-custom": "workspace:*",
         "tsconfig": "workspace:*",
         "typescript": "^5.2.2",
+        "utility-types": "^3.10.0",
+        "utils": "workspace:*",
         "vite": "^4.4.9",
-        "vite-tsconfig-paths": "^4.2.0",
-        "utils": "workspace:*"
+        "vite-tsconfig-paths": "^4.2.0"
     }
 }
