--- a/apps/renderer/package.json
+++ b/apps/renderer/package.json
@@ -2,7 +2,7 @@
     "name": "renderer",
     "private": true,
     "version": "0.0.0",
-    "type": "module",
+    "type": "commonjs",
     "scripts": {
         "build": "tsc && vite build",
         "preview": "vite preview",
@@ -17,6 +17,7 @@
         "@mui/icons-material": "^5.14.3",
         "@mui/material": "^5.14.5",
         "apollo-link-logger": "^2.0.1",
+        "change-case": "^4.1.2",
         "graphql": "^16.8.0",
         "i18next": "^23.4.4",
         "i18next-electron-fs-backend": "^3.0.0",
@@ -25,11 +26,15 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-i18next": "^13.1.2",
+        "react-measure": "^2.5.2",
+        "react-merge-refs": "^2.0.2",
         "react-router-dom": "^6.15.0",
+        "react-use-measure": "^2.1.1",
         "serialize-error": "^11.0.1",
         "types": "workspace:*",
         "ui": "workspace:*",
-        "zen-observable": "^0.10.0"
+        "zen-observable": "^0.10.0",
+        "zod": "^3.22.2"
     },
     "devDependencies": {
         "@emotion/babel-plugin": "^11.11.0",
@@ -41,6 +46,7 @@
         "@parcel/watcher": "^2.2.0",
         "@types/react": "^18.2.20",
         "@types/react-dom": "^18.2.7",
+        "@types/react-measure": "^2.0.8",
         "@types/zen-observable": "^0.8.3",
         "@vitejs/plugin-react": "^4.0.4",
         "electron": "^25.5.0",
@@ -48,8 +54,9 @@
         "eslint-config-custom": "workspace:*",
         "tsconfig": "workspace:*",
         "typescript": "^5.2.2",
+        "utility-types": "^3.10.0",
+        "utils": "workspace:*",
         "vite": "^4.4.9",
-        "vite-tsconfig-paths": "^4.2.0",
-        "utils": "workspace:*"
+        "vite-tsconfig-paths": "^4.2.0"
     }
 }
