--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -19,6 +19,7 @@
         "@tanstack/react-virtual": "3.0.0-beta.54",
         "material-ui-popup-state": "^5.0.9",
         "nanoid": "^4.0.2",
+        "rc-scrollbars": "^1.1.6",
         "react": "^18.2.0",
         "react-hook-form": "^7.45.4",
         "react-use-measure": "^2.1.1",
